src/test/deca/test_compilateur/context/invalid/created/acces_field/field_protected.deca
// Description :
//    acces à un field protegé
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 14 :(3.65) L’attribut est protégé

class A{
 protected int x;
}

{
A a = new A();
int b = a.x;
}